[package]
name = "ansi-to-tui-forked"
version = "3.0.0-ratatui"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>", "Arijit Basu <hi@arijitbasu.in>"]

edition = "2018"
description = "A library to convert ansi color coded text into ratatui::text::Text type from ratatui library"
keywords = ["ansi", "ascii", "tui", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uttarayan21/ansi-to-tui"

[dependencies]
nom = "7.1"
simdutf8 = { version = "0.1", optional = true }
tui = { version = "0.*", default-features = false, package = "ratatui" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"

[features]
simd = ["simdutf8"]
